--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mongodb": "^6.10.0",
     "next": "16.0.3",
     "openai": "^4.57.0",
+    "@langchain/core": "^0.3.18",
+    "@langchain/deepseek": "^0.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^3.23.8",
