--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.18",
+    "@langchain/deepseek": "^0.1.0",
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.10.0",
     "next": "16.0.3",
     "openai": "^4.57.0",
-    "@langchain/core": "^0.3.18",
-    "@langchain/deepseek": "^0.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^3.23.8",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
