ci(vercel): update vercel config and add local settings
- Increase maxDuration for chat API endpoints
- Add hnd1 region configuration
- Add .claude/settings.local.json with allowed bash commands

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-  "buildCommand": "next build",
-  "outputDirectory": ".next",
   "framework": "nextjs",
   "functions": {
+    "app/api/chat/**/*.ts": {
+      "maxDuration": 60
+    },
     "app/api/**/*.ts": {
       "maxDuration": 30
     }
-  }
+  },
+  "regions": ["hnd1"]
 }
