--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 src/app/api/auth/refresh/route.ts
+
+# Docker deployment
+*.tar
+persona-chatbot*.tar
