--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.10.0",
-    "next": "16.0.3",
+    "next": "^14",
     "openai": "^4.57.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.0"
   },
@@ -26,11 +26,10 @@
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
