feat: Integrate web search functionality and enhance persona data structure with additional fields

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@langchain/core": "^0.3.18",
     "@langchain/deepseek": "^0.1.0",
     "bcryptjs": "^3.0.3",
+    "duck-duck-scrape": "^2.2.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.10.0",
